RESOLVED FIXED152053
[TexMap] TextureMapperTiledBackingStore should notify the ImageObserver of the data access
https://bugs.webkit.org/show_bug.cgi?id=152053
Summary [TexMap] TextureMapperTiledBackingStore should notify the ImageObserver of th...
Zan Dobersek
Reported 2015-12-09 03:43:36 PST
[TexMap] TextureMapperTiledBackingStore should notify the ImageObserver of the data access
Attachments
Patch (2.10 KB, patch)
2015-12-09 03:46 PST, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2015-12-09 03:46:31 PST
Martin Robinson
Comment 2 2015-12-09 04:05:23 PST
Does this cause an issue that can be tested with a layout test?
Zan Dobersek
Comment 3 2015-12-09 04:18:17 PST
(In reply to comment #2) > Does this cause an issue that can be tested with a layout test? I don't think so, the patch addresses the issue where the decoded image data gets evicted from the memory cache even if it was recently used, which would cause the image data to be decoded again when accessed afterwards.
Zan Dobersek
Comment 4 2015-12-09 06:03:54 PST
Comment on attachment 266986 [details] Patch Clearing flags on attachment: 266986 Committed r193828: <http://trac.webkit.org/changeset/193828>
Zan Dobersek
Comment 5 2015-12-09 06:04:01 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.